test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidReturnTypeMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__moveto' has incorrect return type
	int __moveto(unused void* dest, unused size_t offset) noexcept {
		return 0;
	}
}

// CHECK: 1 error generated.
